2006-12-04 Sandro Santilli <strk@refractions.net>

	* tests/unit/geom/CoordinateArraySequenceTest.cpp:
	  added tests for setOrdinate()
	* tests/unit/capi/GEOSCoordSeq.cpp: 
	  add test for bug #133 (failing).

2006-11-30 Sandro Santilli <strk@refractions.net>

	* tests/unit/: Makefile.am, capi/GEOSCoordSeq.cpp:
	  new experimental test for C-API GEOSCoordSeq.
	* capi/geos_c.cpp (GEOSCoordSeq_create): removed
	  suspicious static cast.

2006-11-15 Sandro Santilli <strk@refractions.net>

	* source/geom/Point.cpp (equalsExact): don't segfault
	  on empty points. Fixes bug #132.

2006-11-22 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/: stmlf-cases-20061020.xml,
	  Makefile.am: add more robustness testcases.

2006-11-22 dron@ak4719.spb.edu

	* autogen.sh: call 'autoheader' after 'aclocal'.
	  Fixes bug #131

2006-11-15 Sandro Santilli <strk@refractions.net>

	* configure.in: don't generate geos_c.h.vc
	* source/Makefile.vc: don't generate geos_c.h and version.h
	* source/headers/geos/version.h.vc, capi/geos_c.h.vc.in:
	  removed, will NOT be needed by Makefile.vc
	* source/headers/geos/Makefile.am: distribute version.h
	* capi/Makefile.am: distribute geos_c.h

2006-11-15 Sandro Santilli <strk@refractions.net>

	* capi/geos_c.h.in: hopefully fixed GEOS_DLL use.

2006-11-15 Sandro Santilli <strk@refractions.net>

	* capi/geos_c.cpp (GEOSGeom_getDimensions):
	  Fix a segfault on empty geometry input
	  (fix bug #126).

2006-11-10 Paul Ramsey <pramsey@refractions.net>

	* capi/Makefile.am, geos_c.h.vc: allow the .vc file to be
          updated automatically with version numbers from the core
          version files at the root of the source tree. 

2006-11-09 Sandro Santilli <strk@refractions.net>

	* test/xmltester/XMLTester.cpp: improved 'testarea' test.

2006-11-08 Sandro Santilli <strk@refractions.net>

	* tests/xmltester/robustness.xml: made test safe to
	  run by using the new 'areatest' operation; added